--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,7 +53,7 @@ button {
   text-align: center;
   width: 100%;
   padding: 0.8rem;
-  /* margin: 1rem 0; */
+  margin: 1rem 0;
   opacity: 0.9;
   background: var(--light-color);
   color: #333;
